src/sass/_navigation.scss
.navigation {
  display: grid;
  grid-template-columns: 1fr 2fr 1fr;
  position: relative;
  @media only screen and (max-width: $bp-medium) {
    grid-template-columns: 3fr 0 1fr;
    justify-content: center;
  }
}

.logo {
  align-self: start;
  display: flex;
  align-items: center;
  justify-content: center;

  &__icon {
    height: 2.6rem;
    width: 2.6rem;
    fill: $green;
  }
}

.menu {
  align-self: end;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-gap: 1rem;
  grid-template-rows: 5rem;

  @media only screen and (max-width: $bp-medium) {
    transform: scale(0);
    transform-origin: top;
  }

  &__item {
    display: flex;
    list-style: none;
    position: relative;
    align-items: center;
    justify-content: center;
  }

  &__item:before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background: $green;
    transform: scale(0);
    transform-origin: right;
    transition: transform 0.5s;
    overflow: hidden;
    z-index: -1;
  }

  &__item:hover:before {
    transform: scale(1);
    transform-origin: left;
  }

  &__item:hover .menu__link {
    color: $white;
  }

  &__link {
    text-align: center;
    width: 100%;
  }

  &__icon {
    margin-right: 2rem;
    fill: currentColor;
  }

  &__hamburger {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    left: 1rem;
    cursor: pointer;
    visibility: hidden;

    @media only screen and (max-width: $bp-medium) {
      visibility: visible;
    }
  }
}

.search {
  display: flex;
  align-items: center;
  justify-content: center;

  &__input {
    font-family: inherit;
    font-size: inherit;
    color: inherit;
    background-color: $white;
    border: none;
    padding: 1rem;
    border-radius: 100px;
    width: 90%;
    transition: all 0.2s;
    margin-right: -3.25rem;
    @media only screen and (max-width: $bp-small) {
      margin-right: -2.25rem;
    }

    &:focus {
      transition: all 0.2s;
      outline: none;
      width: 100%;
    }
  }

  &__button {
    border: none;
    background-color: $white;
  }
  &__icon {
    fill: $black;
  }
}

.active {
  background-color: $green;

  a {
    color: $white;
  }
}

